Fix collapsing for link, add italics for movie title

--- a/front-end/movies-evan-likes/src/app.css
+++ b/front-end/movies-evan-likes/src/app.css
@@ -3,8 +3,12 @@ html, body
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 100%;
   background-color: #b3b3b3;
-
 }
+
+a {
+  text-decoration: none;
+}
+
 
 .page {
   padding: 1rem;
